Added the variables for color

--- a/index.html
+++ b/index.html
@@ -1,87 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | [Challenge Name Here]</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <!--Main Style Sheet-->
+  <link rel="stylesheet" href="./style.css">
+  <!--FontAwesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+  <title>Frontend Mentor | social-media-dashboard-with-theme-switcher-master</title>
+
 </head>
+
 <body>
 
-  Social Media Dashboard
-  Total Followers: 23,004
+  <section id="root">
+    <header class="header">
+      <div class="title__header">
+        <h1>Social Media Dashboard</h1>
+        <p>Total Followers: 23,004</p>
+      </div>
+      <div class="toggle__header">
+        <label class="switch__header">
+          <input type="checkbox">
+          <span class="slider__switch round__switch"></span>
+        </label>
+      </div>
+    </header>
+    <main class="data-one"></main>
+    <div class="sub-title"></div>
+    <main class="data-two"></main>
 
-  Dark Mode
+    
 
-  
-
-  @nathanf
-  1987
-  Followers
-  12 Today
-
-  @nathanf
-  1044
-  Followers
-  99 Today
-
-  @realnathanf
-  11k
-  Followers
-  1099 Today
-
-  Nathan F.
-  8239
-  Subscribers
-  144 Today
+    Dark Mode
 
 
 
-  Overview - Today
+    @nathanf
+    1987
+    Followers
+    12 Today
 
-  Page Views
-  87
-  3%
+    @nathanf
+    1044
+    Followers
+    99 Today
 
-  Likes
-  52
-  2%
+    @realnathanf
+    11k
+    Followers
+    1099 Today
 
-  Likes
-  5462
-  2257%
+    Nathan F.
+    8239
+    Subscribers
+    144 Today
 
-  Profile Views
-  52k
-  1375%
 
-  Retweets
-  117
-  303%
 
-  Likes
-  507
-  553%
+    Overview - Today
 
-  Likes
-  107
-  19%
+    Page Views
+    87
+    3%
 
-  Total Views
-  1407
-  12%
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Likes
+    52
+    2%
+
+    Likes
+    5462
+    2257%
+
+    Profile Views
+    52k
+    1375%
+
+    Retweets
+    117
+    303%
+
+    Likes
+    507
+    553%
+
+    Likes
+    107
+    19%
+
+    Total Views
+    1407
+    12%
+  </section>
+  <footer class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </footer>
 </body>
+
 </html>
