Created the cards and added initial style

--- a/index.html
+++ b/index.html
@@ -21,46 +21,98 @@
 
   <section id="root">
     <header class="header">
-      <div class="title__header">
-        <h1>Social Media Dashboard</h1>
-        <p>Total Followers: 23,004</p>
-      </div>
-      <div class="toggle__header">
-        <label class="switch__header">
-          <input type="checkbox">
-          <span class="slider__switch round__switch"></span>
-        </label>
+      <div class="header-container">
+        <div class="title__header-container">
+          <h1>Social Media Dashboard</h1>
+          <p>Total Followers: 23,004</p>
+        </div>
+        <div class="toggle__header-container">
+          <p>Dark mode</p>
+          <label class="switch__header-container">
+            <input type="checkbox">
+            <span class="slider__switch round__switch"></span>
+          </label>
+        </div>
       </div>
     </header>
-    <main class="data-one"></main>
+    <main class="cards-one">
+      <div class="card-container">
+        <div class="first-card">
+          <div class="card-top">
+            <p>
+              <i class="fab fa-facebook-square"></i>
+              @nathanf
+            </p>
+          </div>
+          <div class="card-middle">
+            <h3>1987</h3>
+            <p>Followers</p>
+          </div>
+          <div class="card-bottom">
+            <p>
+              <i class="fas fa-caret-up"></i>
+              12 Today
+            </p>
+          </div>
+        </div>
+        <div class="second-card">
+          <div class="card-top">
+            <p>
+              <i class="fab fa-facebook-square"></i>
+              @nathanf
+            </p>
+          </div>
+          <div class="card-middle">
+            <h3>1044</h3>
+            <p>Followers</p>
+          </div>
+          <div class="card-bottom">
+            <p>
+              <i class="fas fa-caret-up"></i>
+              99 Today
+            </p>
+          </div>
+        </div>
+        <div class="third-card">
+          <div class="first-card__card-top">
+            <p>
+              <i class="fab fa-facebook-square"></i>
+              @realnathanf
+            </p>
+          </div>
+          <div class="card-middle">
+            <h3>11k</h3>
+            <p>Followers</p>
+          </div>
+          <div class="card-bottom">
+            <p>
+              <i class="fas fa-caret-up"></i>
+              1099 Today
+            </p>
+          </div>
+        </div>
+        <div class="forth-card">
+          <div class="first-card__card-top">
+            <p>
+              <i class="fab fa-facebook-square"></i>
+              Nathan F.    
+            </p>
+          </div>
+          <div class="card-middle">
+            <h3>8239</h3>
+            <p>Subscribers</p>
+          </div>
+          <div class="card-bottom">
+            <p>
+              <i class="fas fa-caret-up"></i>
+              144 Today
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
     <div class="sub-title"></div>
-    <main class="data-two"></main>
-
-    
-
-    Dark Mode
-
-
-
-    @nathanf
-    1987
-    Followers
-    12 Today
-
-    @nathanf
-    1044
-    Followers
-    99 Today
-
-    @realnathanf
-    11k
-    Followers
-    1099 Today
-
-    Nathan F.
-    8239
-    Subscribers
-    144 Today
+    <main class="cards-two"></main>
 
 
 
