Created the top border for cards

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 </head>
 
 <body>
-
   <section id="root">
     <header class="header">
       <div class="header-container">
@@ -37,8 +36,10 @@
     </header>
     <main class="cards-one">
       <div class="card-container">
-        <div class="first-card">
+        <div class="first-card">     
+          <div class="top-border"></div>  
           <div class="card-top">
+            
             <p>
               <i class="fab fa-facebook-square"></i>
               @nathanf
@@ -54,8 +55,10 @@
               12 Today
             </p>
           </div>
+          <div class="ghost"></div>
         </div>
         <div class="second-card">
+          <div class="top-border"></div>  
           <div class="card-top">
             <p>
               <i class="fab fa-facebook-square"></i>
@@ -72,8 +75,10 @@
               99 Today
             </p>
           </div>
+          <div class="ghost"></div>
         </div>
         <div class="third-card">
+          <div class="top-border"></div>  
           <div class="first-card__card-top">
             <p>
               <i class="fab fa-facebook-square"></i>
@@ -90,12 +95,14 @@
               1099 Today
             </p>
           </div>
+          <div class="ghost"></div>
         </div>
         <div class="forth-card">
+          <div class="top-border"></div>  
           <div class="first-card__card-top">
             <p>
               <i class="fab fa-facebook-square"></i>
-              Nathan F.    
+              Nathan F.
             </p>
           </div>
           <div class="card-middle">
@@ -108,15 +115,20 @@
               144 Today
             </p>
           </div>
+          <div class="ghost"></div>
         </div>
       </div>
     </main>
-    <div class="sub-title"></div>
+    <div class="sub-title">
+      <div class="wrapper__sub-title">
+        <h2>Overview - Today</h2>
+      </div>
+    </div>
     <main class="cards-two"></main>
 
 
 
-    Overview - Today
+
 
     Page Views
     87
