Added gradient background to fontawersome

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
       <div class="card-container">
         <div class="first-card">     
           <div class="top-border"></div>  
-          <div class="card-top">
-            
+          <div class="card-top">            
             <p>
               <i class="fab fa-facebook-square"></i>
               @nathanf
@@ -60,8 +59,8 @@
         <div class="second-card">
           <div class="top-border"></div>  
           <div class="card-top">
-            <p>
-              <i class="fab fa-facebook-square"></i>
+            <p >
+              <i class="fab fa-twitter"></i>
               @nathanf
             </p>
           </div>
@@ -79,9 +78,9 @@
         </div>
         <div class="third-card">
           <div class="top-border"></div>  
-          <div class="first-card__card-top">
+          <div class="card-top">
             <p>
-              <i class="fab fa-facebook-square"></i>
+              <i class="fab fa-instagram icon-gradient"></i>
               @realnathanf
             </p>
           </div>
@@ -99,9 +98,9 @@
         </div>
         <div class="forth-card">
           <div class="top-border"></div>  
-          <div class="first-card__card-top">
+          <div class="card-top">
             <p>
-              <i class="fab fa-facebook-square"></i>
+              <i class="fab fa-youtube"></i>
               Nathan F.
             </p>
           </div>
