--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </div>
           <div class="card-bottom">
             <p>
-              <i class="fas fa-caret-up"></i>
+              <i class="fas fa-caret-down"></i>
               144 Today
             </p>
           </div>
