--- a/index.html
+++ b/index.html
@@ -275,7 +275,10 @@
       </main>
     </section>
 
-    <!-- <footer class="attribution">
+    <script src="./main.js"></script>
+
+    <!-- 
+    <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </footer> -->
