Finished the js and css light-darkmode with localStorage

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="toggle__header-container">
           <p>Dark mode</p>
           <label class="switch__header-container">
-            <input type="checkbox" />
+            <input id="light-mode-toggle" type="checkbox" />
             <span class="slider__switch round__switch"></span>
           </label>
         </div>
