--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   </head>
 
   <body>
+    <noscript>Made with ❤️ by https://github.com/DaSilvaBrunoTexas</noscript>
+
     <header class="header">
       <div class="header-container">
         <div class="title__header-container">
