Adjusted github profile in front-end memtor

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
 
   <body>
-    <noscript>Made with ❤️ by https://github.com/DaSilvaBrunoTexas</noscript>
+    <noscript>Made with ❤️ by https://github.com/Brunno-DaSilva</noscript>
 
     <header class="header">
       <div class="header-container">
